change index file

--- a/index.html
+++ b/index.html
@@ -3,27 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WEBSTUDIO</title>
   </head>
   <body>
     <header>
-      <h1><a href="Webstudio">WEBSTUDIO</a></h1>
-      <!-- menu navigation -->
-      <ul>
-        <li>
-          <a href="1">Studio</a>
-        </li>
-        <li>
-          <a href="2">Portfolio</a>
-        </li>
-        <li>
-          <a href="3">Contacts</a>
-        </li>
-      </ul>
       <nav>
+        <h1>
+          <a href="https://yurii-pochepa.github.io/goit-markup-hw-01/"
+            >WEBSTUDIO</a
+          >
+        </h1>
+        <!-- menu navigation -->
+        <ul>
+          <li>
+            <a href="1">Studio</a>
+          </li>
+          <li>
+            <a href="2">Portfolio</a>
+          </li>
+          <li>
+            <a href="3">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <section>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </nav>
+      </section>
     </header>
     <main>
       <!-- Name and buttom -->
@@ -60,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="/images/MarkGuerrero.png"
+              src="/images/markguerrero.jpg"
               alt="Photo Mark Guerrero"
               width="260"
             />
@@ -68,13 +74,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/TomFord.png" alt="Photo Tom Ford" width="260" />
+            <img src="/images/tomford.jpg" alt="Photo Tom Ford" width="260" />
             <h4>Tom Ford</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/CamilaGarcia.png"
+              src="/images/camilagarcia.jpg"
               alt="Photo Camila Garcia"
               width="260"
             />
@@ -83,7 +89,7 @@
           </li>
           <li>
             <img
-              src="/images/DanielWilson.png"
+              src="/images/danielwilson.jpg"
               alt="Photo Daniel Wilson"
               width="260"
             />
@@ -94,7 +100,11 @@
       </div>
     </main>
     <footer>
-      <h2><a href="Webstudio">WEBSTUDIO</a></h2>
+      <h2>
+        <a href="https://yurii-pochepa.github.io/goit-markup-hw-01/"
+          >WEBSTUDIO</a
+        >
+      </h2>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
