--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="/images/markguerrero.jpg"
+              src="./images/markguerrero.jpg"
               alt="Photo Mark Guerrero"
               width="260"
             />
@@ -74,13 +74,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/tomford.jpg" alt="Photo Tom Ford" width="260" />
+            <img src="./images/tomford.jpg" alt="Photo Tom Ford" width="260" />
             <h4>Tom Ford</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/camilagarcia.jpg"
+              src="./images/camilagarcia.jpg"
               alt="Photo Camila Garcia"
               width="260"
             />
@@ -89,7 +89,7 @@
           </li>
           <li>
             <img
-              src="/images/danielwilson.jpg"
+              src="./images/danielwilson.jpg"
               alt="Photo Daniel Wilson"
               width="260"
             />
