--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           </li>
         </ul>
       </nav>
-      <section>
+      <div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </section>
+      </div>
     </header>
     <main>
       <!-- Name and buttom -->
