--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <h1>
-          <a href="https://yurii-pochepa.github.io/goit-markup-hw-01/"
-            >WEBSTUDIO</a
-          >
-        </h1>
+        <a href="./index.html">WebStudio</a>
         <!-- menu navigation -->
         <ul>
           <li>
@@ -26,84 +22,100 @@
           </li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </div>
+      <!-- Contacts -->
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-      <!-- Name and buttom -->
-      <div>
-        <h2>Effective Solutions for Your Business</h2>
+      <!-- Section one -Name -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </div>
-      <!-- Advantages -->
-      <div>
-        <h4>Strategy</h4>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-        <h4>Punctuality</h4>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-        <h4>Diligence</h4>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-        <h4>Technologies</h4>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </div>
+      </section>
+      <!-- Section two - Advantages -->
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!-- Our team -->
-      <div>
-        <h3>Our Team</h3>
+      <section>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
               src="./images/markguerrero.jpg"
               alt="Photo Mark Guerrero"
-              width="260"
+              width="264"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.jpg" alt="Photo Tom Ford" width="260" />
-            <h4>Tom Ford</h4>
+            <img src="./images/tomford.jpg" alt="Photo Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
               src="./images/camilagarcia.jpg"
               alt="Photo Camila Garcia"
-              width="260"
+              width="264"
             />
-            <h4>Camila Garcia</h4>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
               src="./images/danielwilson.jpg"
               alt="Photo Daniel Wilson"
-              width="260"
+              width="264"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <h2>
-        <a href="https://yurii-pochepa.github.io/goit-markup-hw-01/"
-          >WEBSTUDIO</a
-        >
+        <a href="./index.html">WebStudio</a>
       </h2>
       <p>
         Increase the flow of customers and sales for your business with digital
