--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
       <!-- Section two - Advantages -->
       <section>
-        <h2></h2>
+        <h2>Our features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
